--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset ="UTF-8">
+        <title> 산과들 테마농원 </title>
+        <link rel="stylesheet" href="css/bootstrap.css">
+    </head>
+    <body>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script type="text/javascript" src ="js/bootstrap.js"></script>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>index</title>
-</head>
-
-<body>
-    <ul class="fly-in-text hidden">
-      <li>산</li>
-      <li>과</li>
-      <li>들</li>
-      <li>테</li>
-      <li>마</li>
-      <li>농</li>
-      <li>원/li>
-    </ul>
-
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript">
-      $(function () {
-
-        setTimeout(function () {
-          $('.fly-in-text').removeClass('hidden');
-        }, 500);
-
-      })();
-    </script>
-
-</body>
-
+        <nav class="navbar navbar-expand-lg navbar-light bg-success">
+            <a class="navbar-brand" href="#">산과들 테마농원</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="intro.html">소개</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="photo.html">농장전경</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </nav>
+    </body>
 </html>
