--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset ="UTF-8">
         <title> 산과들 테마농원 </title>
         <link rel="stylesheet" href="css/bootstrap.css">
+        <style>
+            body{
+                background-image: url(https://blogfiles.pstatic.net/MjAyMDA1MTNfMzYg/MDAxNTg5Mzc3NjI2NzE5.vBTyLSxRZREWS2XhgrehLTKrgDUJuAoudXCTRRfyLCIg.glKV7eyVR1hM9NLWW_h-1vh5NkjRbYIBZKVif27y2Fkg.JPEG.tjdgus1771/SE-34c9afe6-86f2-43a6-9607-f57682664a22.jpg);
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        </style>
     </head>
     <body>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
