--- a/photo.html
+++ b/photo.html
@@ -1,2 +1,1 @@
-농장사진<br>
-동영상
+<img src="https://blogfiles.pstatic.net/MjAyMDA1MTNfMTE5/MDAxNTg5Mzc4MDEwMDc0.1h3JgHytUdzOY8cEirOFOS3UUSXw4k70ovr-Ij-XKTog.15ccqNugRPSjgpLl4AisyA6jih6HcbQpqbnpRozpsDIg.JPEG.tjdgus1771/%ED%98%B8%EB%B0%95.jpg" alt="농장내부" />
