--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="photo.html">농장전경</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="map.html">오시는 길</a>
+                  </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
