--- a/map.html
+++ b/map.html
@@ -36,7 +36,7 @@
           border: 1px solid #999;
         }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7gtXV_12xQI2jxGSIeQGxQM4DK5Q38Wo&v=3.exp&sensor=true"></script>
     <script>
     var directionsDisplay;
     var directionsService = new google.maps.DirectionsService();
