--- a/map.html
+++ b/map.html
@@ -1,97 +1,176 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <title>Directions service</title>
+  <head>
+    <title>Displaying Text Directions With setPanel()</title>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7gtXV_12xQI2jxGSIeQGxQM4DK5Q38Wo&callback=initMap&libraries=&v=weekly" defer></script>
     <style type="text/css">
-        html, body {
-          height: 100%;
-          margin: 0;
-          padding: 0;
-        }
- 
-        #map-canvas, #map_canvas {
-          height: 100%;
-        }
- 
-        @media print {
-          html, body {
-            height: auto;
-          }
- 
-          #map_canvas {
-            height: 650px;
-          }
-        }
- 
-        #panel {
-          position: absolute;
-          top: 5px;
-          left: 50%;
-          margin-left: -180px;
-          z-index: 5;
-          background-color: #fff;
-          padding: 5px;
-          border: 1px solid #999;
-        }
-    </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7gtXV_12xQI2jxGSIeQGxQM4DK5Q38Wo&v=3.exp&sensor=true"></script>
-    <script>
-    var directionsDisplay;
-    var directionsService = new google.maps.DirectionsService();
-    var map;
- 
-    function initialize() {
-      directionsDisplay = new google.maps.DirectionsRenderer();
-      var loc = new google.maps.LatLng(37.633798,127.297071);
-      var mapOptions = {
-        zoom:18,
-        mapTypeId: google.maps.MapTypeId.ROADMAP,
-        center: loc
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 100%;
       }
-      map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-      directionsDisplay.setMap(map);
-      var marker = new google.maps.Marker({position:loc, map: map})
-    }
- 
-    function calcRoute() {
-      var start = document.getElementById('start').value;
-      var end = document.getElementById('end').value;
-      var mode = document.getElementById('mode').value;
- 
-      var request = {
-          origin:start,
-          destination:'경기도 남양주시 화도읍 차산리117',
-          travelMode: eval("google.maps.DirectionsTravelMode."+mode)
-      };
-      directionsService.route(request, function(response, status) {
-        alert(status);  // 확인용 Alert..미사용시 삭제
-        if (status == google.maps.DirectionsStatus.OK) {
-            directionsDisplay.setDirections(response);
+
+      /* Optional: Makes the sample page fill the window. */
+      html,
+      body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      #floating-panel {
+        position: absolute;
+        top: 10px;
+        left: 25%;
+        z-index: 5;
+        background-color: #fff;
+        padding: 5px;
+        border: 1px solid #999;
+        text-align: center;
+        font-family: "Roboto", "sans-serif";
+        line-height: 30px;
+        padding-left: 10px;
+      }
+
+      #right-panel {
+        font-family: "Roboto", "sans-serif";
+        line-height: 30px;
+        padding-left: 10px;
+      }
+
+      #right-panel select,
+      #right-panel input {
+        font-size: 15px;
+      }
+
+      #right-panel select {
+        width: 100%;
+      }
+
+      #right-panel i {
+        font-size: 12px;
+      }
+
+      #right-panel {
+        height: 100%;
+        float: right;
+        width: 390px;
+        overflow: auto;
+      }
+
+      #map {
+        margin-right: 400px;
+      }
+
+      #floating-panel {
+        background: #fff;
+        padding: 5px;
+        font-size: 14px;
+        font-family: Arial;
+        border: 1px solid #ccc;
+        box-shadow: 0 2px 2px rgba(33, 33, 33, 0.4);
+        display: none;
+      }
+
+      @media print {
+        #map {
+          height: 500px;
+          margin: 0;
         }
-      });
-    }
- 
-    google.maps.event.addDomListener(window, 'load', initialize);
- 
+
+        #right-panel {
+          float: none;
+          width: auto;
+        }
+      }
+    </style>
+    <script>
+      "use strict";
+
+      function initMap() {
+        const directionsRenderer = new google.maps.DirectionsRenderer();
+        const directionsService = new google.maps.DirectionsService();
+        const map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 7,
+          center: {
+            lat: 41.85,
+            lng: -87.65
+          }
+        });
+        directionsRenderer.setMap(map);
+        directionsRenderer.setPanel(document.getElementById("right-panel"));
+        const control = document.getElementById("floating-panel");
+        control.style.display = "block";
+        map.controls[google.maps.ControlPosition.TOP_CENTER].push(control);
+
+        const onChangeHandler = function() {
+          calculateAndDisplayRoute(directionsService, directionsRenderer);
+        };
+
+        document
+          .getElementById("start")
+          .addEventListener("change", onChangeHandler);
+        document
+          .getElementById("end")
+          .addEventListener("change", onChangeHandler);
+      }
+
+      function calculateAndDisplayRoute(directionsService, directionsRenderer) {
+        const start = document.getElementById("start").value;
+        const end = document.getElementById("end").value;
+        directionsService.route(
+          {
+            origin: start,
+            destination: end,
+            travelMode: google.maps.TravelMode.DRIVING
+          },
+          (response, status) => {
+            if (status === "OK") {
+              directionsRenderer.setDirections(response);
+            } else {
+              window.alert("Directions request failed due to " + status);
+            }
+          }
+        );
+      }
     </script>
-    </head>
-    <body>
-        <div id="panel" >
-            <b>출발지: </b>
-            <input type="text" id="start" />
-            <div>
-                <strong>이동수단: </strong>
-                <select id="mode">
-                <option value="DRIVING">Driving</option>
-                <option value="WALKING">Walking</option>
-                <option value="BICYCLING">Bicycling</option>
-                <option value="TRANSIT">Transit</option>
-                </select>
-                <input type="button" value="길찾기" onclick="Javascript:calcRoute();" />
-            </div>
-        </div>
-        <div id="map-canvas"></div>
-    </body>
+  </head>
+  <body>
+    <div id="floating-panel">
+      <strong>Start:</strong>
+      <select id="start">
+        <option value="chicago, il">Chicago</option>
+        <option value="st louis, mo">St Louis</option>
+        <option value="joplin, mo">Joplin, MO</option>
+        <option value="oklahoma city, ok">Oklahoma City</option>
+        <option value="amarillo, tx">Amarillo</option>
+        <option value="gallup, nm">Gallup, NM</option>
+        <option value="flagstaff, az">Flagstaff, AZ</option>
+        <option value="winona, az">Winona</option>
+        <option value="kingman, az">Kingman</option>
+        <option value="barstow, ca">Barstow</option>
+        <option value="san bernardino, ca">San Bernardino</option>
+        <option value="los angeles, ca">Los Angeles</option>
+      </select>
+      <br />
+      <strong>End:</strong>
+      <select id="end">
+        <option value="chicago, il">Chicago</option>
+        <option value="st louis, mo">St Louis</option>
+        <option value="joplin, mo">Joplin, MO</option>
+        <option value="oklahoma city, ok">Oklahoma City</option>
+        <option value="amarillo, tx">Amarillo</option>
+        <option value="gallup, nm">Gallup, NM</option>
+        <option value="flagstaff, az">Flagstaff, AZ</option>
+        <option value="winona, az">Winona</option>
+        <option value="kingman, az">Kingman</option>
+        <option value="barstow, ca">Barstow</option>
+        <option value="san bernardino, ca">San Bernardino</option>
+        <option value="los angeles, ca">Los Angeles</option>
+      </select>
+    </div>
+    <div id="right-panel"></div>
+    <div id="map"></div>
+  </body>
 </html>
