--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
   <head>
     <title>Displaying Text Directions With setPanel()</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC7gtXV_12xQI2jxGSIeQGxQM4DK5Q38Wo&callback=initMap&libraries=&v=weekly" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAw2A3g6E9pe5toSG9Z0kB-N1m4DJjaczU&callback=initMap&libraries=&v=weekly" defer></script>
     <style type="text/css">
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -86,16 +86,15 @@
       }
     </style>
     <script>
-      "use strict";
-
       function initMap() {
-        const directionsRenderer = new google.maps.DirectionsRenderer();
-        const directionsService = new google.maps.DirectionsService();
-        const map = new google.maps.Map(document.getElementById("map"), {
-          zoom: 7,
+        var directionsRenderer = new google.maps.DirectionsRenderer();
+        var directionsService = new google.maps.DirectionsService();
+        //var marker = new google.maps.Marker({position:loc, map: map});
+        var map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 18,
           center: {
-            lat: 41.85,
-            lng: -87.65
+            lat: 37.633798,
+            lng: 127.297071
           }
         });
         directionsRenderer.setMap(map);
@@ -103,73 +102,52 @@
         const control = document.getElementById("floating-panel");
         control.style.display = "block";
         map.controls[google.maps.ControlPosition.TOP_CENTER].push(control);
-
-        const onChangeHandler = function() {
-          calculateAndDisplayRoute(directionsService, directionsRenderer);
-        };
-
-        document
-          .getElementById("start")
-          .addEventListener("change", onChangeHandler);
-        document
-          .getElementById("end")
-          .addEventListener("change", onChangeHandler);
+        const geocoder = new google.maps.Geocoder();
+        document.getElementById("submit").addEventListener("click", () => {
+        geocodeAddress(geocoder, map,directionsService, directionsRenderer);
+        });
       }
 
-      function calculateAndDisplayRoute(directionsService, directionsRenderer) {
-        const start = document.getElementById("start").value;
-        const end = document.getElementById("end").value;
-        directionsService.route(
+      function geocodeAddress(geocoder, resultsMap,directionsService, directionsRenderer) {
+        const address = document.getElementById("address").value;
+        geocoder.geocode(
           {
-            origin: start,
-            destination: end,
-            travelMode: google.maps.TravelMode.DRIVING
+            address: address
           },
-          (response, status) => {
+          (results, status) => {
             if (status === "OK") {
-              directionsRenderer.setDirections(response);
-            } else {
-              window.alert("Directions request failed due to " + status);
+              directionsService.route(
+                {
+                  origin: {
+                      lat:results[0].geometry.location.lat(),
+                      lng:results[0].geometry.location.lng()
+                  },
+                  destination: {
+                      lat:41.898251,
+                      lng:-87.652760
+                  },
+                  travelMode: google.maps.TravelMode.DRIVING
+                },
+                (response, status) => {
+                  if (status === "OK") {
+                    directionsRenderer.setDirections(response);
+                  } else {
+                    window.alert("Directions request failed due to " + status);
+                  }
+                }
+              );
             }
-          }
-        );
+        });
       }
     </script>
   </head>
   <body>
     <div id="floating-panel">
-      <strong>Start:</strong>
-      <select id="start">
-        <option value="chicago, il">Chicago</option>
-        <option value="st louis, mo">St Louis</option>
-        <option value="joplin, mo">Joplin, MO</option>
-        <option value="oklahoma city, ok">Oklahoma City</option>
-        <option value="amarillo, tx">Amarillo</option>
-        <option value="gallup, nm">Gallup, NM</option>
-        <option value="flagstaff, az">Flagstaff, AZ</option>
-        <option value="winona, az">Winona</option>
-        <option value="kingman, az">Kingman</option>
-        <option value="barstow, ca">Barstow</option>
-        <option value="san bernardino, ca">San Bernardino</option>
-        <option value="los angeles, ca">Los Angeles</option>
-      </select>
-      <br />
-      <strong>End:</strong>
-      <select id="end">
-        <option value="chicago, il">Chicago</option>
-        <option value="st louis, mo">St Louis</option>
-        <option value="joplin, mo">Joplin, MO</option>
-        <option value="oklahoma city, ok">Oklahoma City</option>
-        <option value="amarillo, tx">Amarillo</option>
-        <option value="gallup, nm">Gallup, NM</option>
-        <option value="flagstaff, az">Flagstaff, AZ</option>
-        <option value="winona, az">Winona</option>
-        <option value="kingman, az">Kingman</option>
-        <option value="barstow, ca">Barstow</option>
-        <option value="san bernardino, ca">San Bernardino</option>
-        <option value="los angeles, ca">Los Angeles</option>
-      </select>
+      <strong>출발주소:</strong>
+      <input id="address" type="textbox"/>
+      <input id="submit" type="button" value="길찾기" />
     </div>
+  </div>
     <div id="right-panel"></div>
     <div id="map"></div>
   </body>
