modify main readme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <a href ="BOM/connect_two_page.html" > 두 페이지 통신 실습 </a>
+        <a href ="connect_two_page.html" > 두 페이지 통신 실습 </a>
     </body>
 </html>
